fixed contact page spacing

--- a/src/assets/scss/pages/contact/_contact.scss
+++ b/src/assets/scss/pages/contact/_contact.scss
@@ -4,7 +4,7 @@ body.contact {
   main {
     min-height: 100vh;
     
-    .restrict-container {
+    .restrict-container.lg {
       padding: 0 0.8rem 4rem;
     }
 
